import org.gradle.nativeplatform.platform.internal.DefaultNativePlatform

plugins {
  id 'java'
  id 'org.openjfx.javafxplugin' version '0.0.13'
}

group 'legend'
version '1.0-SNAPSHOT'

sourceCompatibility = targetCompatibility = 1.17

project.ext.lwjglVersion = "3.2.3"
project.ext.jomlVersion = "1.10.1"

if(DefaultNativePlatform.getCurrentOperatingSystem().isWindows()) {
  project.ext.lwjglNatives = "natives-windows"
}

if(DefaultNativePlatform.getCurrentOperatingSystem().isLinux()) {
  project.ext.lwjglNatives = "natives-linux"
}

if(DefaultNativePlatform.getCurrentOperatingSystem().isMacOsX()) {
  project.ext.lwjglNatives = "natives-macos"
}

if (hasProperty("os")) {
  switch (os) {
    case "windows":
      project.ext.lwjglNatives = "natives-windows"
      break
    case "linux":
      project.ext.lwjglNatives = "natives-linux"
      break
    case "macos":
      project.ext.lwjglNatives = "natives-macos"
      break
  }
}

repositories {
  mavenCentral()
  mavenLocal()
}

dependencies {
  implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.14.1'
  implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.14.1'
  implementation group: 'org.fusesource.jansi', name: 'jansi', version: '2.3.2'

  implementation platform("org.lwjgl:lwjgl-bom:$lwjglVersion")

  implementation 'com.google.apis:google-api-services-youtube:v3-rev20210915-1.32.1'
  implementation 'com.google.api-client:google-api-client:1.33.0'
  implementation "com.google.api-client:google-api-client-jackson2:2.1.3"
  implementation group: 'com.google.http-client', name: 'google-http-client-jackson2', version: '1.42.3'
  implementation group: 'com.google.apis', name: 'google-api-services-oauth2', version: 'v2-rev20200213-2.0.0'
  implementation group: "com.google.http-client", name: 'google-http-client-extensions', version: '1.6.0-beta'

  implementation "org.lwjgl:lwjgl"
  implementation "org.lwjgl:lwjgl-glfw"
  implementation "org.lwjgl:lwjgl-nuklear"
  implementation "org.lwjgl:lwjgl-opengl"
  implementation "org.lwjgl:lwjgl-stb"
  runtimeOnly "org.lwjgl:lwjgl::$lwjglNatives"
  runtimeOnly "org.lwjgl:lwjgl-glfw::$lwjglNatives"
  runtimeOnly "org.lwjgl:lwjgl-nuklear::$lwjglNatives"
  runtimeOnly "org.lwjgl:lwjgl-opengl::$lwjglNatives"
  runtimeOnly "org.lwjgl:lwjgl-stb::$lwjglNatives"
  implementation "org.joml:joml:${jomlVersion}"

  implementation group: 'com.github.slugify', name: 'slugify', version: '3.0.2'

  implementation group: 'it.unimi.dsi', name: 'fastutil', version: '8.5.9'

  implementation group: 'org.reflections', name: 'reflections', version: '0.10.2'
  // To quiet no logger found for reflections
  implementation group: 'org.slf4j', name: 'slf4j-nop', version: '2.0.5'

  implementation group: 'com.google.code.findbugs', name: 'jsr305', version: '3.0.2'

  implementation group: 'net.java.dev.jna', name: 'jna', version: '5.12.1'

  testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
  testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
}

javafx {
  version = "18.0.2"
  modules = ['javafx.controls', 'javafx.fxml']
}

jar {
  manifest {
    attributes(
      'Main-Class': 'legend.game.Main'
    )
  }
}

task clearOutput(type: Delete) {
  delete "${buildDir}/libs/libs"
  delete "${buildDir}/libs/**"
}

task copyLibs(type: Copy) {
  from configurations.compileClasspath + configurations.runtimeClasspath
  into "${buildDir}/libs/libs"
}

task copySupportFiles(type: Copy) {
  into "${buildDir}/libs"

  into("gfx") {
    from 'gfx'
  }

  into(".") {
    from 'launch.bat'
    from 'log4j2.xml'
  }
}

jar.dependsOn(clearOutput, copyLibs, copySupportFiles)

test {
  useJUnitPlatform()
}
